--- a/TS/package.json
+++ b/TS/package.json
@@ -392,7 +392,8 @@
     "xtend": "^4.0.2",
     "y18n": "^4.0.0",
     "yallist": "^3.1.1",
-    "yargs-parser": "^13.1.1"
+    "yargs-parser": "^13.1.1",
+    "phaser": "^3.22.0"
   },
   "devDependencies": {
     "ts-loader": "^6.2.1",
